Fix zbib-illustration size on mobiles. Tweak video on iPad.

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -51,7 +51,7 @@
 
 		@media (max-width: ($bp-md - 1px)) {
 			left: 6px;
-			width: 150px;
+			width: 156px;
 			height: auto;
 			margin: 0 auto (64px - 16px);
 		}
